--- a/CourseLibraryAPI/appsettings.json
+++ b/CourseLibraryAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=CourseLibraryDB.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
