--- a/CourseLibraryAPI/CourseLibraryAPI.csproj
+++ b/CourseLibraryAPI/CourseLibraryAPI.csproj
@@ -13,6 +13,8 @@
     <Folder Include="Models\" />
     <Folder Include="Helpers\" />
     <Folder Include="Profiles\" />
+    <Folder Include="ResourcesParameters\" />
+    <Folder Include="ValidationAttributes\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
@@ -23,5 +25,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
   </ItemGroup>
 </Project>
